force-app/main/default/objects/MIP_Milestone__c/MIP_Milestone__c.object-meta.xml
<CustomObject>
    <description>SOX object - Used to create Partner Mutual Investment Plan Contract Milestone Goals. Based on milestone achievements Partners are paid out.</description>
    <label>MIP Milestone</label>
    <nameField>
        <displayFormat>MID-{0000000}</displayFormat>
        <label>Milestone ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MIP Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>