force-app/main/default/objects/MIP_Milestone__c/fields/Activity_Description__c.field-meta.xml
<CustomField>
    <fullName>Activity_Description__c</fullName>
    <label>Activity Description</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>