force-app/main/default/objects/MIP_Milestone__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>MIP Milestones</relationshipLabel>
    <relationshipName>MIP_Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>