force-app/main/default/objects/MIP_Milestone__c/fields/Milestone_Element_Type__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Element_Type__c</fullName>
    <formula>MIP_Element__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Milestone Element Type</label>
    <type>Text</type>
</CustomField>