force-app/main/default/objects/MIP_Milestone__c/fields/MIP_Element__c.field-meta.xml
<CustomField>
    <fullName>MIP_Element__c</fullName>
    <description>Master Detail Relationship b/w MIP Element and MIP Milestone</description>
    <label>MIP Element</label>
    <referenceTo>MIP_Element__c</referenceTo>
    <relationshipLabel>MIP Milestones</relationshipLabel>
    <relationshipName>MIP_Milestones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>