force-app/main/default/objects/MIP_Milestone__c/fields/Proof_of_Performance_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Proof_of_Performance_Requirement__c</fullName>
    <label>Proof of Performance Requirement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>