force-app/main/default/objects/MIP_Milestone__c/validationRules/Description_Mandatory_VR.validationRule-meta.xml
<ValidationRule>
    <fullName>Description_Mandatory_VR</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(ISPICKVAL(Milestone_Type__c,&apos;Other&apos;)),
ISBLANK( Activity_Description__c))</errorConditionFormula>
    <errorDisplayField>Activity_Description__c</errorDisplayField>
    <errorMessage>Please add an activity description when type is Other</errorMessage>
</ValidationRule>